# Fleet-Health-Monitor

./: .gitignore  README.md  package.xml  setup.cfg  setup.py
fleet_health_monitor/: dashboard_node.py  fault_signatures.py  feature_engineering.py  gui_monitor.py  telemetry_logger.py  unit_telemetry_publisher.py
launch/: fleet_demo.launch.py
models/: fault_classifier.pkl
scripts/: generate_training_data.py  train_model.py
